# rustpad

./: .cursorignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
docs/: ARCHITECTURE.md
docs/releases/: v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md
scripts/: build.ps1  build.sh  build_macos.sh  generate_macos_info_plist.sh  macos_codesign.sh  macos_create_dmg.sh  macos_notarize.sh  macos_package_app.sh  read_cargo_version.sh
src/: app.rs  atomic_write.rs  branding.rs  main.rs
src/config/: mod.rs  theme.rs
src/diff/: binary_diff.rs  engine.rs  folder_diff.rs  folder_sync.rs  mod.rs  three_way.rs
src/editor/: autocomplete.rs  buffer.rs  column_selection.rs  context_actions.rs  cursor.rs  encoding.rs  file_io.rs  fold.rs  indent.rs  macro_recorder.rs  mod.rs  tab.rs  view.rs
src/highlight/: mod.rs
src/i18n/: mod.rs
src/platform/: macos.rs  macos_menu.rs  mod.rs  shell.rs  windows.rs
src/plugin/: mod.rs
src/search/: mod.rs
src/session/: mod.rs
src/ui/: binary_diff_toolbar.rs  binary_diff_view.rs  command_palette.rs  compare_menu.rs  compare_session.rs  compare_viewport.rs  compare_window.rs  dialogs.rs  diff_navigator.rs  diff_toolbar.rs  diff_view.rs  editor_context_menu.rs  editor_view.rs  editor_widget.rs  encoding_menu.rs  file_tree.rs  folder_diff_view.rs  keybindings.rs  keybindings_dialog.rs  layout.rs  line_layout.rs  menu.rs  menu_actions.rs  minimap.rs  mod.rs  scroll_bar.rs  search_highlight.rs  search_panel.rs  sidebar.rs  split_view.rs  status_bar.rs  tab_bar.rs  tab_context_menu.rs  text_util.rs  toolbar.rs
